[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Thomas J. Fan <thomasjpfan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.2.1"
flytekit = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
